--- a/views/layouts/browser.pug
+++ b/views/layouts/browser.pug
@@ -6,7 +6,7 @@ block navbar
     .navbar__left
         +iconElement(
             'button',
-            '/images/burgerIcon.png',
+            icons.burgerIcon,
             null,
             {
                 'class': [
@@ -17,7 +17,7 @@ block navbar
         )
         +iconElement(
             'a',
-            '/images/favicon.png',  
+            icons.favicon,  
             'Tech Stack',
             {
                 'href': '/',
@@ -37,7 +37,7 @@ block navbar
         if loginUser
             +iconElement(
                 'a',
-                '/images/writeIcon.png', 
+                icons.writeIcon, 
                 'Write',
                 {
                     'href': `/users/${loginUser.username}/blog-posts/new-blog-post`,
@@ -53,7 +53,7 @@ block navbar
         
         +iconElement(
             'button',
-            '/images/profileIcon.png',
+            icons.profileIcon,
             null,
             {
                 'class': [
