--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -8,7 +8,7 @@ html(lang="en")
       name='description' 
       content='A place for reading blog posts by coders and tech enthusiasts.'
     )
-    link(rel='icon' type='image/x-icon' href='/images/favicon.png')
+    link(rel='icon' type='image/x-icon' href=icons.favicon)
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(nonce=nonce). 
       const backendData = !{JSON.stringify(data)};
