--- a/views/pages/blogPost.pug
+++ b/views/pages/blogPost.pug
@@ -14,7 +14,7 @@ block page
             .blog-post__metadata
                 .blog-post__author-details
                     - const author = blogPost.author
-                    - let profileIcon = '/images/profileIcon.png'
+                    - let profileIcon = icons.profileIcon
 
                     if author.profile_pic
                         - const profilePic = author.profile_pic
