--- a/views/pages/userProfile.pug
+++ b/views/pages/userProfile.pug
@@ -19,7 +19,7 @@ block page
                         - const dataUri = `data:${pic.contentType};base64,${base64}`
                         img(src=dataUri)
                     else
-                        img(src='/images/profileIcon.png')
+                        img(src=icons.profileIcon)
 
                 .profile__username= user.username
             .profile__secondary
@@ -89,7 +89,7 @@ block page
                         - const recentReadsIconElements = []
 
                         each blogPost in recentReads
-                            - let icon = '/images/profileIcon.png'
+                            - let icon = icons.profileIcon
                             - const pic = blogPost.author.profile_pic
         
                             if pic
@@ -138,7 +138,7 @@ block page
                             - const blogPostsWrittenIconElements = []
 
                             each blogPost in user.blog_posts_written
-                                - let icon = '/images/profileIcon.png'
+                                - let icon = icons.profileIcon
                                 - const pic = user.profile_pic
             
                                 if pic
