--- a/views/components/toolbar/navbarDropdown.pug
+++ b/views/components/toolbar/navbarDropdown.pug
@@ -5,7 +5,7 @@ include ../list/iconElementList
         | No blog posts found.
     else
         - const iconElements = []
-        - const defaultIcon = '/images/profileIcon.png'
+        - const defaultIcon = icons.profileIcon
 
         each blogPost in blogPosts
             - 
