--- a/views/layouts/author.pug
+++ b/views/layouts/author.pug
@@ -6,7 +6,7 @@ block navbar
     .navbar__left
         +iconElement(
             'button',
-            '/images/burgerIcon.png',
+            icons.burgerIcon,
             null,
             {
                 'class': [
@@ -17,7 +17,7 @@ block navbar
         )
         +iconElement(
             'a',
-            '/images/favicon.png', 
+            icons.favicon, 
             'Tech Stack',
             {
                 'href': '/',
@@ -54,7 +54,7 @@ block navbar
         
         +iconElement(
             'button',
-            '/images/profileIcon.png',
+            icons.profileIcon,
             null,
             {
                 'class': [
