--- a/public/stylesheets/views/pages/_user-blog-posts.scss
+++ b/public/stylesheets/views/pages/_user-blog-posts.scss
@@ -36,4 +36,10 @@
         overflow: auto;
         border: 2px solid colors.$bg2;
     }
+
+    &__published-container, &__unpublished-container {
+        p {
+            margin-left: 1rem;
+        }
+    }
 }
