Thumbnail only needs to be uploaded once, viewed if uploaded

--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -70,4 +70,4 @@ block page
         .blog-post-form-page__right
             .blog-post-form-page__heading Preview
             .blog-post-form-page__body
-                +blogPostFragment()
+                +blogPostFragment(blogPost)
